--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -65,3 +65,8 @@ h4{
     -webkit-transform: translate3d(10%, 0, 0);
     transform: translate3d(10%, 0, 0);
 }
+
+.card-header{
+    background: #008B8B;
+    color: #fff;
+}
