--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -70,3 +70,66 @@ h4{
     background: #008B8B;
     color: #fff;
 }
+
+.radio-item label{
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    line-height: 25px;
+    height: 25px;
+    cursor: pointer;
+}
+.radio-item input[type="radio"]{
+    width: 17px;
+    height: 17px;
+    margin: 0 5px 0 5px;
+    padding: 0;
+    cursor: pointer;
+}
+
+
+
+/* .radio-item input[type="radio"]{
+    visibility: hidden;
+    width: 17px;
+    height: 20px;
+    margin: 0 5px 0 5px;
+    padding: 0;
+    cursor: pointer;
+}
+
+.radio-item input[type="radio"]:before {
+    position: relative;
+    margin: 4px -25px -4px 0;
+    display: inline-block;
+    visibility: visible;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    border: 2px inset rgb(150, 150, 150, 0.75);
+    background: radial-gradient(ellipse at top left, rgba(255, 255, 255)0% rgb(250, 250, 250)5% rgb(230, 230, 230)95% rgb(225, 225, 225)100%);
+    content: '';
+    cursor: pointer;
+}
+
+.radio-item input[type="radio"]:checked:after {
+    position: relative;
+    top: 0;
+    left: 9px;
+    display: inline-block;
+    visibility: visible;
+    width: 12px;
+    height: 12px;
+    border-radius: 6px;
+    background: radial-gradient(ellipse at top left, rgba(240, 255, 220)0% rgb(225, 250, 100)5% rgb(75, 75, 0)95% rgb(25, 100, 0)100%);
+    content: '';
+    cursor: pointer;
+}
+
+.radio-item input[type="radio"].true:checked:after {
+    background: radial-gradient(ellipsis at top left, rgba(240, 255, 220)0% rgb(225, 250, 100)5% rgb(75, 75, 0)95% rgb(25, 100, 0)100%);
+}
+
+.radio-item input[type="radio"].false:checked:after {
+    background: radial-gradient(ellipse at top left, rgba(255, 255, 255)0% rgb(250, 250, 250)5% rgb(230, 230, 230)95% rgb(225, 225, 225)100%);
+} */
