--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -61,6 +61,11 @@ h4{
     color: #fff;
 }
 
+.btn-outline.active{
+    color: #fff;
+    background: #008B8B;
+}
+
 .modal.fade:not(.in)#addUser .modal-dialog{
     -webkit-transform: translate3d(10%, 0, 0);
     transform: translate3d(10%, 0, 0);
